istio/fes-istio/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:us-west-2:963202130184:certificate/d511c97e-ba04-435b-b404-476645d47dcb'
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=true,idle_timeout.timeout_seconds=900
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-policy: "ELBSecurityPolicy-FS-1-2-Res-2020-10"
    external-dns.alpha.kubernetes.io/hostname: '*.fareye.co'
    alb.ingress.kubernetes.io/target-type: 'ip'
    kubernetes.io/ingress.class: alb
    meta.helm.sh/release-name: fe-stack
    meta.helm.sh/release-namespace: fes
  name: istio-ingress-ip
  namespace: fes
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: ingressgateway-istio-fes
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
